# VRmicelliKart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_output.txt  change_specs.md  properties.h.in  vcpkg.json
.gemini/: system.md
assets/shaders/opengl/: default.shader.glsl
cmake/: lus-cvars.cmake
courses/harbour/: ship2_model.c
docs/: ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  LICENSES.md  PLAN.md  Telemetry.md  VR.md  Wheel.md  mainpage.md  modding.md
include/: common_structs.h  macros.h  mk64.h  stubs.h
include/assets/models/: data_800E8700.h
include/assets/textures/: other_textures.h
include/assets/textures/karts/: bowser_kart.h  donkeykong_kart.h  luigi_kart.h  mario_kart.h  peach_kart.h  toad_kart.h  wario_kart.h  yoshi_kart.h
include/assets/textures/tracks/rainbow_road/: rainbow_road_data.h
libultraship/: CMakeLists.txt
libultraship/include/fast/backends/: gfx_direct3d_common.h
libultraship/include/libultraship/: libultraship.h
libultraship/include/libultraship/bridge/: consolevariablebridge.h
libultraship/include/libultraship/controller/controldeck/: ControlDeck.h
libultraship/include/ship/: Context.h
libultraship/include/ship/config/: ConsoleVariable.h
libultraship/src/: CMakeLists.txt
libultraship/src/fast/backends/: gfx_direct3d11_vr.cpp  gfx_direct3d11_vr.h
libultraship/src/fast/shaders/opengl/: default.shader.glsl
libultraship/src/libultraship/bridge/: consolevariablebridge.cpp
libultraship/src/ship/: CMakeLists.txt  Context.cpp
libultraship/src/ship/controller/controldevice/controller/mapping/sdl/: SDLWheelAxisDirectionToAxisDirectionMapping.cpp
libultraship/src/vr/: VRSession.cpp  VRSession.h
scratch/: test_json.cpp  test_numeric_prefix.cpp
src/: camera.c  camera.cpp  code_800029B0.cpp  code_80005FD0.cpp  code_80005FD0.h  code_80057C60.c  code_80057C60.cpp  code_8006E9C0.cpp  main.c  main.cpp  menu_items.c  menu_items.cpp  player_controller.c  render_objects.c  render_objects.cpp  render_objects.h  render_player.c  render_player.cpp  spawn_players.cpp  stubs.cpp  update_objects.cpp
src/actors/fake_item_box/: render.inc.cpp
src/actors/falling_rock/: render.inc.cpp  update.inc.cpp
src/actors/item_box/: render.inc.cpp
src/actors/yoshi_egg/: render.inc.cpp
src/ending/: podium_ceremony_actors.cpp
src/engine/: Actor.cpp  Actor.h  Matrix.cpp  PlayerBombKart.cpp  PlayerBombKart.h  RaceManager.cpp  Smoke.cpp  World.cpp  World.h
src/engine/actors/: Banana.cpp  Banana.h  BowserStatue.cpp  BowserStatue.h  Cloud.cpp  Cloud.h  FallingRock.cpp  FallingRock.h  Finishline.cpp  Finishline.h  MarioSign.cpp  MarioSign.h  Text.cpp  Tree.cpp  Tree.h  WarioSign.cpp  WarioSign.h
src/engine/cameras/: GameCamera.cpp  VRCamera.cpp  VRCamera.h
src/engine/editor/: Editor.cpp  SceneManager.cpp
src/engine/objects/: Bat.cpp  BombKart.cpp  BombKart.h  Boos.cpp  Boos.h  CheepCheep.cpp  GrandPrixBalloons.cpp  GrandPrixBalloons.h  Lakitu.cpp  Penguin.cpp  Thwomp.cpp  TrashBin.cpp
src/engine/particles/: StarEmitter.cpp
src/engine/sky/: Sky.cpp  SkyActor.h  SkyCloud.cpp  SkySnow.cpp  SkyStar.cpp
src/engine/tracks/: CustomTrack.cpp  KoopaTroopaBeach.cpp
src/enhancements/: VRMode.cpp  VRMode.h  WheelFFBManager.h
src/enhancements/freecam/: freecam.cpp
src/enhancements/telemetry/: PacketPC2.h  README.md  Telemetry.cpp  Telemetry.h  TelemetryCalibration.cpp  TelemetryCalibration.h
src/enhancements/vr/: README.md  VRCamera.cpp  VRCamera.h  VRMode.cpp  VRMode.h
src/enhancements/wheel/: FFBEffects.cpp  FFBEffects.h  README.md  WheelTuning.cpp  WheelTuning.h
src/os/: __osViInit.cpp  bstring.h  guLookAtF.c  guPerspectiveF.c  guPerspectiveF.cpp  osCartRomInit.cpp  osInitialize.cpp  osLeoDiskInit.cpp
src/port/: Engine.cpp  Engine.cpp-new.txt  Engine.cpp-top-includes.txt  Game.cpp  SpaghettiControlDeck.cpp  SpaghettiControlDeck.h  SpaghettiGui.cpp  SpaghettiGui.h  TelemetryManager.cpp  TelemetryManager.h  TelemetryPacket.h  WheelManager.cpp  WheelManager.h
src/port/audio/: HMAS.cpp  HMAS.h
src/port/interpolation/: matrix.c
src/port/telemetry/: Telemetry.cpp  Telemetry.h
src/port/ui/: ImguiUI.cpp  Menu.cpp  Menu.h  MenuTypes.h  PortMenu.cpp  PortMenu.cpp_suffix  PortMenu.h  TelemetryMenu.cpp  TelemetryMenu.h  Tools.cpp  UIWidgets.cpp  UIWidgets.h
src/port/vr/: VRManager.cpp  VRManager.h  VRTypes.h
src/racing/: actors.cpp  collision.cpp  collision.h  framebuffer_effects.c  memory.cpp  race_logic.cpp  skybox_and_splitscreen.cpp
temp_ref/sk_vr/SpaghettiKart-VR-main/: README.md
tools/blender/fast64/fast64_internal/f3d/: f3d_material_helpers.py
